# rwth.cool

./: Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  docker-compose.yml  redirects.toml
.github/workflows/: check_and_deploy.yml  deploy.yml
src/: main.rs
static/: robots.txt  search.js
templates/: 404.html  base.html  index.html
