[package]
name = "rwth_cool"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["http2"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
askama = "0.12"
askama_axum = "0.3"
http = "1.0"
