[package]
name = "rwth_cool"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["http2", "macros"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
askama = "0.14"
http = "1.0"
headers = "0.4"
once_cell = "1.19"
